# lylac

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
lylac/: __init__.py  _main.py  utils.py
lylac/_constants/: __init__.py  _fields.py  _messages.py  _models.py  _values.py  names.py
lylac/_contexts/: __init__.py  _actions.py  _automations.py  _computed.py  _select_context.py
lylac/_core/: __init__.py  _base.py  _env.py
lylac/_core/_interface/: __init__.py  _access.py  _actions.py  _algorythms.py  _auth.py  _automations.py  _base.py  _compiler.py  _compute.py  _connection.py  _ddl.py  _dml.py  _dql.py  _index.py  _metadata.py  _models.py  _output.py  _preprocess.py  _query.py  _select.py  _structure.py  _subtransaction.py  _validations.py  _where.py
lylac/_core/_submodules/: __init__.py  _base_access.py  _base_auth.py  _base_automations.py  _base_base_lylac.py  _base_compiler.py  _base_index.py  _base_select.py  _base_structure.py  _base_validations.py  (+1 more)
lylac/_data/: __init__.py  _initial_data.py  _preset_automations.py
lylac/_errors/: __init__.py  _error_types.py
lylac/_models/: __init__.py  _models.py
lylac/_module_types/: __init__.py  _base.py  _callbacks.py  _data.py  _interface.py  _metadata.py  _miscelaneous.py  _objects.py  _validations.py
lylac/_modules/: __init__.py
lylac/_settings/: __init__.py  _env.py  _session.py  _users.py
lylac/errors/: __init__.py  _error_types.py
lylac/params/: __init__.py
lylac/security/: __init__.py  _auth.py
src/lylac/: __init__.py  _main.py
src/mynx/: __init__.py  _main.py
(+353 files in other folders)
